update to Java 17